AC_PREREQ(2.63)
AC_INIT([bibledit-paratext],[1.0],[http://bibledit.org])
ac_default_prefix=/usr
AC_CONFIG_SRCDIR([.])
AM_INIT_AUTOMAKE([1.9 tar-ustar])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
echo "
Bibledit-Paratext $VERSION configuration summary:

  Version                : ${PACKAGE_VERSION}
"
