bin_PROGRAMS = bibledit-bin bibledit-bibletime bibledit-git bibledit-restart

bibledit_bibletime_SOURCES = \
        bibledit-bibletime.cpp \
        ustring.cpp \
        bookdata.cpp \
        ipc.cpp

bibledit_git_SOURCES = \
        bibledit-git.cpp \
        ustring.cpp \
        ipc.cpp \
        git-exec.cpp \
        tiny_utilities.cpp

bibledit_restart_SOURCES = \
        bibledit-restart.cpp

bibledit_bin_SOURCES = \
		bibledit.cpp \
		utilities.cpp \
    	tiny_utilities.cpp \
		bible.cpp \
		usfmtools.cpp \
		exception.cpp \
		mainwindow.cpp \
		dialoglistview.cpp \
		dialogshowscript.cpp \
		htmlbrowser.cpp \
		track.cpp \
		dialogreplace.cpp \
		dialogreplacing.cpp \
		windowsoutpost.cpp \
		dialoggotoreference.cpp \
		dialogunicode.cpp \
	    projectutils.cpp \
	    dialogproject.cpp \
	    usfm.cpp \
	    dialogimporttext.cpp \
	    dialogwait.cpp \
	    directories.cpp \
	    ustring.cpp \
	    dialogsearchspecial.cpp \
	    referenceutils.cpp \
	    references.cpp \
	    pdfviewer.cpp \
        notes_utils.cpp \
        date_time_utils.cpp \
        dialogfindnote.cpp \
        dialogimportnotes.cpp \
        dialognotes.cpp \
        dialogentry.cpp \
        dialogcompare.cpp \
        compareutils.cpp \
        export_utils.cpp \
        bibletime.cpp \
        dialogprintprefs.cpp \
        paper.cpp \
        xmlutils.cpp \
        dialogprintproject.cpp \
        stylesheetutils.cpp \
        dialogstylesheet.cpp \
        style.cpp \
        dialogentry3.cpp \
        printproject.cpp \
        xmlfo-utils.cpp \
        dialogformatter.cpp \
        java.cpp \
        search_utils.cpp \
        dialogexportnotes.cpp \
        xep.cpp \
        dialogshownotes.cpp \
        dialogdate.cpp \
        gwrappers.cpp \
        gtkwrappers.cpp \
        usfm-inline-markers.cpp \
        completion.cpp \
        combobox.cpp \
        keyboard.cpp \
        listview.cpp \
        scripturechecks.cpp \
        versification.cpp \
        dialogrefexchange.cpp \
        dialogcheck.cpp \
        dialogeditlist.cpp \
        shell.cpp \
        export_translation_notes.cpp \
        sqlite_reader.cpp \
        dialogarea.cpp \
        unixwrappers.cpp \
        highlight.cpp \
        fonts.cpp \
        dialogfont.cpp \
        dialogopenstylesheet.cpp \
        note_editor.cpp \
        notecaller.cpp \
        xslfofootnoteparagraph.cpp \
        dialoginsertnote.cpp \
        notetemplate.cpp \
        dialogsword.cpp \
        dialogparallelbible.cpp \
        print_parallel_bible.cpp \
        mapping.cpp \
        swordnote.cpp \
        languages.cpp \
        osis.cpp \
        dialogselectchapters.cpp \
        portion_utils.cpp \
        scriptureportions.cpp \
        editor.cpp \
        uname.cpp \
        dialogscreenlayout.cpp \
        layout.cpp \
        user.cpp \
        import.cpp \
        clean.cpp \
        categorize.cpp \
        progresswindow.cpp \
        books.cpp \
        dialogbook.cpp \
        generalconfig.cpp \
        screen.cpp \
        projectconfig.cpp \
        gui.cpp \
        check_validate_usfm.cpp \
        checks.cpp \
        dialoglinecutter.cpp \
        check_count_words.cpp \
        dialogoutpost.cpp \
        dialognotestransfer.cpp \
        dialogassignbooks.cpp \
        dialogtextview.cpp \
        dialogchapternumber.cpp \
        httpd.cpp \
        opendocument.cpp \
        odtutils.cpp \
        odtnotes.cpp \
        help.cpp \
        color.cpp \
        dialogmychecks.cpp \
        check_count_usfms.cpp \
        check_count_characters.cpp \
        check_chapters_verses.cpp \
        check_compare_usfm.cpp \
        check_unwanted_patterns.cpp \
        check_unwanted_words.cpp \
        check_repetition.cpp \
        check_capitalization.cpp \
        check_matching_pairs.cpp \
        rc4.c \
        dialogoriginreferences.cpp \
        originreferences.cpp \
        dialogtidy.cpp \
        tidy.cpp \
        shortcuts.cpp \
        upgrade.cpp \
        reference.cpp \
        keyterms.cpp \
        dialognotesupdate.cpp \
        keytermsgui.cpp \
        guiselectproject.cpp \
        check_markers_spacing.cpp \
        gui_navigation.cpp \
        myfnmatch.c \
        statistics.cpp \
        dialogbackup.cpp \
        backup.cpp \
        dialogviewsubversion.cpp \
        dialogsubversionadd.cpp \
        dialogsubversionsetup.cpp \
        projectutilsold.cpp \
        dialogchanges.cpp \
        dialogrevert.cpp \
        dialogselectbooks.cpp \
        resource_utils.cpp \
        html.cpp \
        dialogreviewanchors.cpp \
        dialogeditnote.cpp \
        biblenotes.cpp \
        dialogwordlist.cpp \
        wordlist.cpp \
        dialogfontcolor.cpp \
        dialognewstylesheet.cpp \
        outline.cpp \
        gui_styles.cpp \
        settings.cpp \
        session.cpp \
        session_highlights.cpp \
        bookdata.cpp \
        ipc.cpp \
        config.xml.cpp \
        localizedbooks.cpp \
        versifications.cpp \
        mappings.cpp \
        dialogfeatures.cpp \
        password.cpp \
        gui_features.cpp \
        dialogprintreferences.cpp \
        print_parallel_references.cpp \
        dialogfixmarkers.cpp \
        fixmarkers.cpp \
        check_ref_inventory.cpp \
        check_validate_refs.cpp \
        dialogtextreplacement.cpp \
        textreplacement.cpp \
        temporal.cpp \
        ot-quotations.cpp \
        parallel_passages.cpp \
        ot-nt-parallels.cpp \
        check_parallel_passages.cpp \
        dialogpdfviewer.cpp \
        displayprojectnotes.cpp \
        styles.cpp \
        editor_aids.cpp \
        dialogviewusfm.cpp \
        dialoginserttable.cpp \
        git.cpp \
        git-exec.cpp \
        usfm2xslfo.cpp \
        usfm2xslfo_utils.cpp \
        hyphenate.cpp \
        reporting.cpp \
        planning.cpp \
        dialogreportingsetup.cpp \
        dialogeditstatus.cpp \
        dialogtaskduration.cpp \
        htmlwriter.cpp \
        dialogviewstatus.cpp \
        dialogplanningsetup.cpp \
        dialoginterfaceprefs.cpp \
        resourceviewergui.cpp \
        resource.cpp \
        dialognewresource.cpp \
        dialogresourcebooks.cpp \
        dialogradiobutton.cpp \
        dialogresourceconverter2.cpp \
        resource_conversion_utils.cpp \
        convert.cpp \
        textviewer.cpp \
        roman.cpp \
        project_memory.cpp \
        editorsgui.cpp \
        restart.cpp \
        mergegui.cpp \
        dialogmerge.cpp \
        merge_utils.cpp \
        shutdown.cpp \
        scripts.cpp \
        dialogfilters.cpp \
        dialogdictionary.cpp \
        spelling.cpp \
        dialogeditdictionary.cpp \
        check_sentence_structure.cpp \
        dialogcheckbutton.cpp \
        dialogimportrawtext.cpp \
        gtkhtml3browser.cpp \
        htmlcache.cpp \
        dialogxfernotes2text.cpp \
        htmlcolor.cpp

EXTRA_DIST = *.h .indent.pro d_bus.cpp test update-copyright

AM_CXXFLAGS = -Wall 
AM_CXXFLAGS += `xml2-config --cflags`
AM_CXXFLAGS += $(GOBJECT_CFLAGS)
AM_CXXFLAGS += $(GTHREAD_CFLAGS)
AM_CXXFLAGS += $(GLIB_CFLAGS)
AM_CXXFLAGS += $(GTK_CFLAGS)
AM_CXXFLAGS += $(FONTCONFIG_CFLAGS)
AM_CXXFLAGS += $(SQLITE_CFLAGS)
AM_CXXFLAGS += $(ENCHANT_CFLAGS)
AM_CXXFLAGS += $(GTKHTML38_CFLAGS)
AM_CXXFLAGS += $(GTKHTML314_CFLAGS)
AM_CXXFLAGS += $(LIBCURL_CPPFLAGS)

LIBS = -Wall 
LIBS += `xml2-config --libs`
LIBS += $(GOBJECT_LIBS)
LIBS += $(GTHREAD_LIBS)
LIBS += $(GLIB_LIBS)
LIBS += $(GTK_LIBS)
LIBS += $(FONTCONFIG_LIBS)
LIBS += $(SQLITE_LIBS)
LIBS += $(ENCHANT_LIBS)
LIBS += $(GTKHTML38_LIBS)
LIBS += $(GTKHTML314_LIBS)
LIBS += $(LIBCURL)

if LINUX
endif
if DARWIN
endif
if WIN32
LIBS += -mwindows
endif

CLEANFILES = *~
