bin_PROGRAMS = bibledit-dbus

bibledit_dbus_SOURCES = \
		bibledit-dbus.cpp

EXTRA_DIST = *.h

AM_CXXFLAGS = -Wall 
AM_CXXFLAGS += $(GOBJECT_CFLAGS)
AM_CXXFLAGS += $(GTHREAD_CFLAGS)
AM_CXXFLAGS += $(GLIB_CFLAGS)
AM_CXXFLAGS += $(DBUSGLIB_CFLAGS)
AM_CXXFLAGS += $(LIBSOUP_CFLAGS)

LIBS = -Wall 
LIBS += $(GOBJECT_LIBS)
LIBS += $(GTHREAD_LIBS)
LIBS += $(GLIB_LIBS)
LIBS += $(DBUSGLIB_LIBS)
LIBS += $(LIBSOUP_LIBS)

if LINUX
endif
if DARWIN
endif
if WIN32
LIBS += -mwindows -lws2_32
endif

CLEANFILES = *~

